--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@google-cloud/storage": "^2.3.0",
     "crypto-js": "^3.1.9-1",
     "expo": "^31.0.0",
     "firebase": "^5.5.7",
@@ -18,7 +19,6 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
     "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^0.19.1",
-    "react-native-fetch-blob": "^0.10.8",
     "react-native-keyboard-spacer": "^0.4.1",
     "react-navigation": "^2.18.2"
   },
