--- a/functions/package.json
+++ b/functions/package.json
@@ -10,9 +10,15 @@
   },
   "dependencies": {
     "@google-cloud/storage": "^2.3.0",
+    "body-parser": "^1.18.3",
+    "busboy": "^0.2.14",
     "child-process-promise": "^2.2.1",
+    "content-type": "^1.0.4",
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
     "firebase-admin": "~6.0.0",
-    "firebase-functions": "^2.1.0"
+    "firebase-functions": "^2.1.0",
+    "raw-body": "^2.3.3"
   },
   "private": true
 }
