--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "crypto-js": "^3.1.9-1",
     "expo": "^31.0.0",
     "firebase": "^5.5.7",
+    "flow": "^0.2.3",
     "mobx": "^5.6.0",
     "mobx-react": "^5.3.6",
     "moment": "^2.22.2",
@@ -23,7 +24,8 @@
     "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^0.19.1",
     "react-native-keyboard-spacer": "^0.4.1",
-    "react-navigation": "^2.18.2"
+    "react-navigation": "^2.18.2",
+    "symbol-observable": "^1.2.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0"
