--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "moment": "^2.22.2",
     "native-base": "^2.8.1",
     "react": "16.5.0",
+    "react-addons-shallow-compare": "^15.6.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
     "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^0.19.1",
