--- a/package.json
+++ b/package.json
@@ -12,15 +12,19 @@
     "@google-cloud/storage": "^2.3.0",
     "autobind-decorator": "^2.2.1",
     "crypto-js": "^3.1.9-1",
+    "d3-ease": "^1.0.5",
+    "exenv": "^1.2.2",
     "expo": "^31.0.0",
     "firebase": "^5.5.7",
     "flow": "^0.2.3",
+    "lodash.isequal": "^4.5.0",
     "mobx": "^5.6.0",
     "mobx-react": "^5.3.6",
     "moment": "^2.22.2",
     "native-base": "^2.8.1",
     "react": "16.5.0",
     "react-addons-shallow-compare": "^15.6.2",
+    "react-move": "^2.8.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
     "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^0.19.1",
