--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
 	"expo": {
 		"name": "Rowena",
 		"description": "This project is really great.",
-		"slug": "Rowena",
+		"slug": "rowena",
 		"privacy": "public",
 		"sdkVersion": "31.0.0",
 		"platforms": [
@@ -28,6 +28,7 @@
 			"**/*"
 		],
 		"ios": {
+			"bundleIdentifier": "com.nubeble.rowena",
 			"supportsTablet": true,
 			"infoPlist": {
 				"NSAppTransportSecurity": "",
@@ -36,6 +37,9 @@
 				"NSPhotoLibraryUsageDescription": "Privacy - Photo Library Usage Description",
 				"NSPhotoLibraryAddUsageDescription": "Privacy - Photo Library Additions Usage Description"
 			}
+		},
+		"android": {
+			"package": "com.nubeble.rowena"
 		}
 	}
 }
