--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-elements": "^0.19.1",
     "react-native-image-crop-picker": "^0.21.3",
     "react-native-keyboard-spacer": "^0.4.1",
+    "react-native-simple-toast": "0.0.8",
     "react-navigation": "^2.18.2",
     "symbol-observable": "^1.2.0"
   },
