--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-addons-shallow-compare": "^15.6.2",
     "react-move": "^2.8.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
+    "react-native-awesome-alerts": "^1.2.0",
     "react-native-datepicker": "^1.7.2",
     "react-native-easy-toast": "^1.1.0",
     "react-native-elements": "^0.19.1",
