--- a/functions/package.json
+++ b/functions/package.json
@@ -22,5 +22,6 @@
     "firebase-functions": "^2.1.0",
     "raw-body": "^2.3.3"
   },
-  "private": true
+  "private": true,
+  "devDependencies": {}
 }
