--- a/functions/package.json
+++ b/functions/package.json
@@ -18,8 +18,8 @@
     "cors": "^2.8.5",
     "expo-server-sdk": "^3.1.0",
     "express": "^4.16.4",
-    "firebase-admin": "6.5.1",
-    "firebase-functions": "^2.1.0",
+    "firebase-admin": "^7.0.0",
+    "firebase-functions": "^2.2.0",
     "raw-body": "^2.3.3"
   },
   "private": true,
