--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-gifted-chat": "^0.7.1",
     "react-native-image-crop-picker": "^0.21.3",
     "react-native-keyboard-spacer": "^0.4.1",
+    "react-native-svg-animated-linear-gradient": "^0.1.9",
     "react-navigation": "^2.18.3",
     "symbol-observable": "^1.2.0"
   },
