Loading Page Animation

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
 	"expo": {
 		"name": "Rowena",
-		"description": "This project is really great.",
+		"description": "CHANEL of the social dating apps.",
 		"slug": "rowena",
 		"privacy": "public",
 		"sdkVersion": "31.0.0",
