--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-keyboard-aware-scroll-view": "^0.8.0",
     "react-native-keyboard-spacer": "^0.4.1",
     "react-native-modal-datetime-picker": "^6.0.0",
+    "react-native-picker-select": "^6.0.0",
     "react-native-svg-animated-linear-gradient": "^0.1.9",
     "react-navigation": "^2.18.3",
     "symbol-observable": "^1.2.0"
