--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
     "react-move": "^2.8.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
     "react-native-awesome-alerts": "^1.2.0",
+    "react-native-dialog": "^5.5.0",
     "react-native-easy-toast": "^1.1.0",
     "react-native-elements": "^0.19.1",
     "react-native-gifted-chat": "^0.7.1",
     "react-native-image-crop-picker": "^0.21.3",
-    "react-native-keyboard-aware-scroll-view": "^0.8.0",
     "react-native-keyboard-spacer": "^0.4.1",
     "react-native-modal-datetime-picker": "^6.0.0",
     "react-native-picker-select": "^6.0.0",
