--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-addons-shallow-compare": "^15.6.2",
     "react-move": "^2.8.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
+    "react-native-alphabetlistview": "^0.3.1",
     "react-native-awesome-alerts": "^1.2.0",
     "react-native-dialog": "^5.5.0",
     "react-native-easy-toast": "^1.1.0",
@@ -36,6 +37,7 @@
     "react-native-keyboard-spacer": "^0.4.1",
     "react-native-modal-datetime-picker": "^6.0.0",
     "react-native-picker-select": "^6.0.0",
+    "react-native-search-box": "0.0.19",
     "react-native-svg-animated-linear-gradient": "^0.1.9",
     "react-navigation": "^2.18.3",
     "symbol-observable": "^1.2.0"
