--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "react-move": "^2.8.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
     "react-native-alphabetlistview": "^0.3.1",
+    "react-native-cache-image": "^1.0.0",
     "react-native-dialog": "^5.5.0",
     "react-native-easy-toast": "^1.1.0",
     "react-native-elements": "^0.19.1",
+    "react-native-fs": "^2.13.3",
     "react-native-gifted-chat": "^0.7.1",
     "react-native-image-crop-picker": "^0.21.3",
     "react-native-keyboard-spacer": "^0.4.1",
@@ -39,7 +41,8 @@
     "react-native-search-box": "0.0.19",
     "react-native-svg-animated-linear-gradient": "^0.1.9",
     "react-navigation": "^2.18.3",
-    "symbol-observable": "^1.2.0"
+    "symbol-observable": "^1.2.0",
+    "url-parse": "^1.4.4"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0"
