--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-keyboard-spacer": "^0.4.1",
     "react-native-modal-datetime-picker": "^6.0.0",
     "react-native-picker-select": "^6.0.0",
+    "react-native-pure-chart": "0.0.24",
     "react-native-search-box": "0.0.19",
     "react-native-svg-animated-linear-gradient": "^0.1.9",
     "react-navigation": "^2.18.3",
