logo & splash image changed

--- a/app.json
+++ b/app.json
@@ -21,7 +21,7 @@
             "backgroundColor": "#282828"
         },
         "splash": {
-            "backgroundColor": "#FEBFD4",
+            "backgroundColor": "#CD5E77",
             "resizeMode": "cover",
             "image": "./assets/splash.png"
         },
