--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-dialog": "^5.5.0",
     "react-native-easy-toast": "^1.1.0",
     "react-native-elements": "^0.19.1",
+    "react-native-firebaseui": "^0.1.2",
     "react-native-fs": "^2.13.3",
     "react-native-gifted-chat": "^0.7.1",
     "react-native-image-crop-picker": "^0.21.3",
