--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
     "react-native-alphabetlistview": "^0.3.1",
     "react-native-cache-image": "^1.0.0",
+    "react-native-confirmation-code-input": "^1.0.4",
     "react-native-dialog": "^5.5.0",
     "react-native-easy-toast": "^1.1.0",
     "react-native-elements": "^0.19.1",
