--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native-keyboard-spacer": "^0.4.1",
     "react-native-modal-datetime-picker": "^6.0.0",
     "react-native-picker-select": "^6.0.0",
+    "react-native-progress": "^3.6.0",
     "react-native-search-box": "0.0.19",
     "react-native-svg-animated-linear-gradient": "^0.1.9",
     "react-navigation": "^2.18.3",
