--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
     "expo": {
         "name": "Rowena",
-        "description": "CHANEL of the social dating apps.",
+        "description": "Search, Chat & Meet New People",
         "slug": "rowena",
         "privacy": "public",
         "sdkVersion": "31.0.0",
