--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "@google-cloud/storage": "^2.3.0",
     "autobind-decorator": "^2.2.1",
     "babel-plugin-transform-remove-console": "^6.9.4",
+    "color": "^3.1.2",
     "crypto-js": "^3.1.9-1",
     "d3-ease": "^1.0.5",
     "exenv": "^1.2.2",
-    "expo": "^31.0.0",
+    "expo": "^33.0.0",
     "firebase": "^5.5.7",
     "flow": "^0.2.3",
     "geofirestore": "^3.2.3",
@@ -25,10 +26,10 @@
     "mobx-react": "^5.3.6",
     "moment": "^2.22.2",
     "native-base": "^2.8.1",
-    "react": "16.5.0",
+    "react": "16.8.3",
     "react-addons-shallow-compare": "^15.6.2",
     "react-move": "^2.8.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
     "react-native-alphabetlistview": "^0.3.1",
     "react-native-cache-image": "^1.0.0",
     "react-native-confirmation-code-input": "^1.0.4",
@@ -44,8 +45,10 @@
     "react-native-picker-select": "^6.0.0",
     "react-native-progress": "^3.6.0",
     "react-native-search-box": "0.0.19",
+    "react-native-svg": "^9.4.0",
     "react-native-svg-animated-linear-gradient": "^0.1.9",
     "react-navigation": "^2.18.3",
+    "react-timer-mixin": "^0.13.4",
     "symbol-observable": "^1.2.0",
     "url-parse": "^1.4.4"
   },
