--- a/package.json
+++ b/package.json
@@ -42,14 +42,16 @@
     "react-native-gifted-chat": "^0.7.3",
     "react-native-image-crop-picker": "^0.21.3",
     "react-native-keyboard-spacer": "^0.4.1",
+    "react-native-maps": "^0.24.2",
     "react-native-modal-datetime-picker": "^6.0.0",
     "react-native-picker-select": "^6.0.0",
     "react-native-progress": "^3.6.0",
     "react-native-search-box": "0.0.19",
     "react-native-svg": "^9.4.0",
     "react-native-svg-animated-linear-gradient": "^0.1.9",
-    "react-navigation": "^2.18.3",
+    "react-navigation": "^3.10.0",
     "react-timer-mixin": "^0.13.4",
+    "sharp": "^0.22.1",
     "symbol-observable": "^1.2.0",
     "url-parse": "^1.4.4"
   },
