--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "d3-ease": "^1.0.5",
     "exenv": "^1.2.2",
     "expo": "^33.0.0",
+    "expo-constants": "^5.0.1",
     "expo-file-system": "^5.0.1",
+    "expo-haptics": "^5.0.1",
     "firebase": "^5.5.7",
     "flow": "^0.2.3",
     "geofirestore": "^3.2.3",
@@ -49,6 +51,7 @@
     "react-native-search-box": "0.0.19",
     "react-native-svg": "^9.4.0",
     "react-native-svg-animated-linear-gradient": "^0.1.9",
+    "react-native-vector-icons": "^6.5.0",
     "react-navigation": "^3.10.0",
     "react-timer-mixin": "^0.13.4",
     "sharp": "^0.22.1",
