--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "empty-project-template",
+  "name": "rowena-template",
   "main": "node_modules/expo/AppEntry.js",
   "private": true,
   "scripts": {
