--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "exenv": "^1.2.2",
     "expo": "^33.0.0",
     "expo-constants": "^5.0.1",
+    "expo-facebook": "^5.0.1",
     "expo-file-system": "^5.0.1",
     "expo-haptics": "^5.0.1",
     "firebase": "^5.5.7",
