--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-facebook": "^5.0.1",
     "expo-file-system": "^5.0.1",
     "expo-haptics": "^5.0.1",
+    "expo-web-browser": "^5.0.3",
     "firebase": "^5.5.7",
     "flow": "^0.2.3",
     "geofirestore": "^3.2.3",
