--- a/functions/package.json
+++ b/functions/package.json
@@ -19,11 +19,14 @@
     "expo-server-sdk": "^3.1.0",
     "express": "^4.16.4",
     "firebase-admin": "^7.0.0",
-    "firebase-functions": "^2.2.0",
+    "firebase-functions": "^3.1.0",
     "raw-body": "^2.3.3",
     "request": "^2.88.0",
     "request-promise": "^4.2.4"
   },
   "private": true,
-  "devDependencies": {}
+  "devDependencies": {},
+  "engines": {
+    "node": "8"
+  }
 }
