check image picker

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-facebook": "^5.0.1",
     "expo-file-system": "^5.0.1",
     "expo-haptics": "^5.0.1",
+    "expo-image-picker": "^5.0.2",
     "expo-web-browser": "^5.0.3",
     "firebase": "^5.5.7",
     "flow": "^0.2.3",
@@ -44,7 +45,6 @@
     "react-native-firebaseui": "^0.1.2",
     "react-native-fs": "^2.13.3",
     "react-native-gifted-chat": "^0.7.3",
-    "react-native-image-crop-picker": "^0.21.3",
     "react-native-keyboard-spacer": "^0.4.1",
     "react-native-maps": "^0.24.2",
     "react-native-modal-datetime-picker": "^6.0.0",
