--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "mobx": "^5.6.0",
     "mobx-react": "^5.3.6",
     "moment": "^2.22.2",
-    "native-base": "^2.8.1",
+    "native-base": "^2.12.1",
     "react": "16.8.3",
     "react-addons-shallow-compare": "^15.6.2",
     "react-move": "^2.8.0",
@@ -49,6 +49,7 @@
     "react-native-maps": "^0.24.2",
     "react-native-modal-datetime-picker": "^6.0.0",
     "react-native-picker-select": "^6.0.0",
+    "react-native-power-translator": "^1.1.1",
     "react-native-progress": "^3.6.0",
     "react-native-search-box": "0.0.19",
     "react-native-svg": "^9.4.0",
