--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-move": "^2.8.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
     "react-native-alphabetlistview": "^0.3.1",
+    "react-native-animatable": "^1.3.2",
     "react-native-cache-image": "^1.0.0",
     "react-native-confirmation-code-input": "^1.0.4",
     "react-native-dialog": "^5.5.0",
@@ -44,7 +45,7 @@
     "react-native-elements": "^0.19.1",
     "react-native-firebaseui": "^0.1.2",
     "react-native-fs": "^2.13.3",
-    "react-native-gifted-chat": "^0.7.3",
+    "react-native-gifted-chat": "^0.9.11",
     "react-native-keyboard-spacer": "^0.4.1",
     "react-native-maps": "^0.24.2",
     "react-native-modal-datetime-picker": "^6.0.0",
