--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
     "react-native-alphabetlistview": "^0.3.1",
     "react-native-animatable": "^1.3.2",
+    "react-native-app-intro-slider": "^3.0.0",
     "react-native-cache-image": "^1.0.0",
     "react-native-confirmation-code-input": "^1.0.4",
     "react-native-dialog": "^5.5.0",
