--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "expo-haptics": "^5.0.1",
     "expo-image-picker": "^5.0.2",
     "expo-web-browser": "^5.0.3",
-    "firebase": "^5.5.7",
+    "firebase": "^5.11.1",
     "flow": "^0.2.3",
     "geofirestore": "^3.2.3",
     "geokit": "^0.1.3",
@@ -34,6 +34,7 @@
     "native-base": "^2.12.1",
     "react": "16.8.3",
     "react-addons-shallow-compare": "^15.6.2",
+    "react-google-maps": "^9.4.5",
     "react-move": "^2.8.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
     "react-native-alphabetlistview": "^0.3.1",
@@ -43,20 +44,18 @@
     "react-native-confirmation-code-input": "^1.0.4",
     "react-native-dialog": "^5.5.0",
     "react-native-easy-toast": "^1.1.0",
-    "react-native-elements": "^0.19.1",
+    "react-native-elements": "^1.1.0",
     "react-native-firebaseui": "^0.1.2",
     "react-native-fs": "^2.13.3",
     "react-native-gifted-chat": "^0.9.11",
-    "react-native-keyboard-spacer": "^0.4.1",
     "react-native-maps": "^0.24.2",
     "react-native-modal-datetime-picker": "^6.0.0",
-    "react-native-picker-select": "^6.0.0",
+    "react-native-picker-select": "^6.3.0",
     "react-native-power-translator": "^1.1.1",
     "react-native-progress": "^3.6.0",
     "react-native-search-box": "0.0.19",
-    "react-native-svg": "^9.4.0",
     "react-native-svg-animated-linear-gradient": "^0.1.9",
-    "react-native-vector-icons": "^6.5.0",
+    "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^3.10.0",
     "react-timer-mixin": "^0.13.4",
     "sharp": "^0.22.1",
