--- a/functions/package.json
+++ b/functions/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@google-cloud/storage": "^2.3.1",
-    "asyncawait": "^1.0.7",
+    "bluebird": "^3.5.5",
     "body-parser": "^1.18.3",
     "busboy": "^0.2.14",
     "child-process-promise": "^2.2.1",
@@ -18,11 +18,10 @@
     "cors": "^2.8.5",
     "expo-server-sdk": "^3.1.0",
     "express": "^4.16.4",
-    "firebase-admin": "^7.4.0",
+    "fibers": "^4.0.1",
+    "firebase-admin": "^8.3.0",
     "firebase-functions": "^3.2.0",
-    "raw-body": "^2.3.3",
-    "request": "^2.88.0",
-    "request-promise": "^4.2.4"
+    "raw-body": "^2.3.3"
   },
   "private": true,
   "devDependencies": {},
