--- a/app.json
+++ b/app.json
@@ -12,7 +12,7 @@
         ],
         "orientation": "portrait",
         "primaryColor": "#FFFFFF",
-        "icon": "./assets/logo.png",
+        "icon": "./assets/icon.png",
         "assetBundlePatterns": [
             "**/*"
         ],
@@ -36,7 +36,7 @@
             "package": "com.nubeble.rowena",
             "googleServicesFile": "./google-services.json",
             "versionCode": 1,
-            "icon": "./assets/icon_android.png",
+            "icon": "./assets/icon.png",
             "permissions": [
                 "CAMERA",
                 "READ_EXTERNAL_STORAGE",
@@ -47,8 +47,8 @@
         },
         "ios": {
             "bundleIdentifier": "com.nubeble.rowena",
-            "buildNumber": "1.1.3",
-            "icon": "./assets/icon_ios.png",
+            "buildNumber": "1.1.4",
+            "icon": "./assets/icon.png",
             "supportsTablet": true,
             "infoPlist": {
                 "NSAppTransportSecurity": "",
