--- a/app.json
+++ b/app.json
@@ -46,6 +46,11 @@
             },
             "googleServicesFile": "./google-services.json",
             "versionCode": 2,
+            "adaptiveIcon": {
+                "foregroundImage": "./assets/foreground_icon.png",
+                "backgroundColor": "#CD5E77",
+                "backgroundImage": "./assets/background_icon.png"
+            },
             "permissions": [
                 "CAMERA",
                 "READ_EXTERNAL_STORAGE",
