--- a/app.json
+++ b/app.json
@@ -34,7 +34,7 @@
         "facebookDisplayName": "Rowena",
         "ios": {
             "bundleIdentifier": "com.nubeble.rowena",
-            "buildNumber": "1.1.18",
+            "buildNumber": "1.1.19",
             "icon": "./assets/ios_icon.png",
             "supportsTablet": true,
             "infoPlist": {
@@ -53,6 +53,7 @@
         "android": {
             "package": "com.nubeble.rowena",
             "versionCode": 2,
+            "icon": "./assets/android_icon.png",
             "adaptiveIcon": {
                 "foregroundImage": "./assets/android_icon.png",
                 "backgroundColor": "#CD5E77"
